--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
 
 	<link rel="stylesheet" href="styles/date_range.css"></link>
 	<script src="lib/date_range.js"></script>
+
+	<script>
+		if (navigator.userAgent.match(/iPad;.*CPU.*OS 7_\d/i) && window.innerHeight != document.documentElement.clientHeight) {
+			var fixViewportHeight = function() {
+				document.documentElement.style.height = window.innerHeight + "px";
+				if (document.body.scrollTop !== 0) {
+					window.scrollTo(0, 0);
+				}
+			}.bind(this);
+
+			window.addEventListener("scroll", fixViewportHeight, false);
+			window.addEventListener("orientationchange", fixViewportHeight, false);
+			fixViewportHeight();
+
+			document.body.style.webkitTransform = "translate3d(0,0,0)";
+		}
+	</script>
 </head>
 <body>
 <div class="date_range date_range_close">
