--- a/index.html
+++ b/index.html
@@ -18,19 +18,9 @@
 	<script src="lib/date_range.js"></script>
 
 	<script>
-		if (navigator.userAgent.match(/iPad;.*CPU.*OS 7_\d/i) && window.innerHeight != document.documentElement.clientHeight) {
-			var fixViewportHeight = function() {
-				document.documentElement.style.height = window.innerHeight + "px";
-				if (document.body.scrollTop !== 0) {
-					window.scrollTo(0, 0);
-				}
-			}.bind(this);
-
-			window.addEventListener("scroll", fixViewportHeight, false);
-			window.addEventListener("orientationchange", fixViewportHeight, false);
-			fixViewportHeight();
-
-			document.body.style.webkitTransform = "translate3d(0,0,0)";
+		if (navigator.userAgent.match(/iPad;.*CPU.*OS 7_\d/i)) {
+		    $('#yourDivID').height(window.innerHeight);
+		    window.scrollTo(0, 0);
 		}
 	</script>
 </head>
