--- a/index.html
+++ b/index.html
@@ -345,6 +345,20 @@
 	</div>
 </div>
 <script>
+if (navigator.userAgent.match(/iPad;.*CPU.*OS 7_\d/i) && window.innerHeight != document.documentElement.clientHeight) {
+	var fixViewportHeight = function() {
+		document.documentElement.style.height = window.innerHeight + "px";
+		if (document.body.scrollTop !== 0) {
+			window.scrollTo(0, 0);
+		}
+	}.bind(this);
+
+	window.addEventListener("scroll", fixViewportHeight, false);
+	window.addEventListener("orientationchange", fixViewportHeight, false);
+	fixViewportHeight();
+
+	document.body.style.webkitTransform = "translate3d(0,0,0)";
+}
 (function($, window, undefined) {
     // First check to see if the platform is an iPhone or iPod
     if(/iP/.test(navigator.platform) &amp;&amp; /Safari/i.test(navigator.userAgent)){
