--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 			<div class="handle show_up">
 				<svg width="40" height="10" class="up" xmlns="http://www.w3.org/2000/svg">
 					<g>
-						<line stroke="#555555" fill="none" x1="0" y1="8" x2="20" y2="0"/>
-						<line stroke="#555555" fill="none" x1="20" y1="0" x2="40" y2="8"/>
+						<line stroke="#555555" fill="none" x1="0" y1="8" x2="20" y2="1"/>
+						<line stroke="#555555" fill="none" x1="20" y1="1" x2="40" y2="8"/>
 					</g>
 				</svg>
 				<svg width="40" height="10" class="down" xmlns="http://www.w3.org/2000/svg">
 					<g>
-						<line stroke="#555555" fill="none" x1="0" y1="0" x2="20" y2="8"/>
-						<line stroke="#555555" fill="none" x1="20" y1="8" x2="40" y2="0"/>
+						<line stroke="#555555" fill="none" x1="0" y1="1" x2="20" y2="8"/>
+						<line stroke="#555555" fill="none" x1="20" y1="8" x2="40" y2="1"/>
 					</g>
 				</svg>
 			</div>
@@ -41,7 +41,7 @@
 					<span class="selection"></span>
 				</div>
 				<form name="date_from">
-					<div class="lines"></div>
+					<div class="lines"><div>:</div></div>
 					<select class="date" id="from_date" name="from_date">
 						<option value="1">1.</option>
 						<option value="2">2.</option>
@@ -194,7 +194,7 @@
 					<span class="selection"></span>
 				</div>
 				<form name="date_to">
-					<div class="lines"></div>
+					<div class="lines"><div>:</div></div>
 					<select class="date" id="to_date" name="to_date">
 						<option value="1">1.</option>
 						<option value="2">2.</option>
@@ -341,7 +341,7 @@
 					</select>
 				</form>
 			</div>
-		<div>
+		</div>
 	</div>
 </div>
 <script>
