Add DateTime Picker Heading

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<div class="date_range date_range_close">
 		<div class="date_range_container">
 			<div class="handle show_up">
+				<div class="heading">Date Time Range</div>
 				<svg width="40" height="10" class="up" xmlns="http://www.w3.org/2000/svg">
 					<g>
 						<line stroke="#555555" fill="none" x1="0" y1="8" x2="20" y2="1"/>
@@ -34,6 +35,7 @@
 						<line stroke="#555555" fill="none" x1="20" y1="8" x2="40" y2="1"/>
 					</g>
 				</svg>
+				<button>Set</button>
 			</div>
 			<div class="date_range_from">
 				<div class="date_range_header date_range_from_header">
